# rasterizer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  math.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h
